tests/golden/type_errors/module_private_name.cd
import "./module_private_name_deps/lib.cd";
print secret;
