tests/golden/type_errors/module_private_name.err
Type error at /home/junhe/compiler/tests/golden/type_errors/module_private_name.cd:2:7: undefined variable `secret`
  print secret;
        ^
